[project]
name = "rabbitlord"
version = "0.1.0"
description = "Helper functions by rabbitlord"
authors = [{ name = "rabbitlord", email = "your@email.com" }]
readme = ""
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
