[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitlord"
version = "0.1.0"
description = "A package for managing rabbit dates"
authors = [{ name = "rabbitlord", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["rabbits"]
